--- a/samples/notebook_sample.ipynb
+++ b/samples/notebook_sample.ipynb
@@ -24,11 +24,12 @@
    },
    "outputs": [],
    "source": [
+    "# TODO: fill in TABLE in query.\n",
     "_QUERY = \"\"\"\\\n",
     "SELECT\n",
     "  *\n",
     "FROM\n",
-    "  `daring-runway-374503.covid_19_search_trends_symptoms_dataset.state_14d`\n",
+    "  `TABLE`\n",
     "\"\"\"\n",
     "logging.basicConfig(level=logging.INFO)\n",
     "\n",
@@ -38,7 +39,8 @@
     "def process(bq_row):\n",
     "    return bq_row\n",
     "\n",
-    "# NOTE: \n",
+    "# NOTE: it is best to keep flow.run in the same block as your processor\n",
+    "# definition.\n",
     "output = flow.run(num_replicas=5)"
    ]
   },
@@ -57,7 +59,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "3_10_0",
    "language": "python",
    "name": "python3"
   },
@@ -72,6 +74,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "44534748364a5959ef3facc023192c1eee6f412acbac485cf96c5da2ef8eedda"
+   }
   }
  },
  "nbformat": 4,
