--- a/samples/notebook_sample.ipynb
+++ b/samples/notebook_sample.ipynb
@@ -3,52 +3,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28e93223-d6d5-45fa-aa08-aa54742ce776",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import logging\n",
-    "import buildflow as flow"
+    "logging.basicConfig(level=logging.INFO)\n",
+    "\n",
+    "import buildflow as flow\n",
+    "import ray"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0a8fcbc-af8b-43a3-85a1-203b5a477b5d",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# TODO(developer): Add a table.\n",
-    "_QUERY = \"\"\"\\\n",
-    "SELECT\n",
-    "  *\n",
-    "FROM\n",
-    "  `TODO`\n",
-    "\"\"\"\n",
-    "logging.basicConfig(level=logging.INFO)\n",
+    "_INPUT_TABLE_ID = ''\n",
     "\n",
-    "@flow.processor(\n",
-    "    input_ref=flow.BigQuery(query=_QUERY),\n",
-    ")\n",
-    "def process(bq_row):\n",
-    "    return bq_row\n",
+    "\n",
+    "@flow.processor(input_ref=flow.BigQuery(table_id=_INPUT_TABLE_ID))\n",
+    "def process_table(table: ray.data.Dataset):\n",
+    "    return table\n",
     "\n",
     "# NOTE: It is best to keep flow.run and your processor definition in the same\n",
     "# code block.\n",
-    "output = flow.run(num_replicas=5)"
+    "output = flow.run(num_replicas=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31dfefe5-d41a-4030-8b1f-6a75cd754496",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(output)"
@@ -57,7 +44,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3_10_0",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -71,14 +58,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.13"
   },
+  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "44534748364a5959ef3facc023192c1eee6f412acbac485cf96c5da2ef8eedda"
+    "hash": "9e7ea89ac1220c678592816c7ec2155d748e0864defa7fd0c3473b324888e4d1"
    }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 2
 }
