--- a/samples/notebook_sample.ipynb
+++ b/samples/notebook_sample.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "flow = Flow()\n",
     "\n",
-    "@flow.processor(input_ref=buildflow.BigQuery(table_id='daring-runway-374503.covid_19_search_trends_symptoms_dataset.state_14d'))\n",
+    "@flow.processor(input_ref=buildflow.BigQuery(table_id=_INPUT_TABLE_ID))\n",
     "def process_table(table: ray.data.Dataset):\n",
     "    return table\n",
     "\n",
