fix: add ability to run more than one flow at a time

--- a/samples/notebook_sample.ipynb
+++ b/samples/notebook_sample.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import logging\n",
@@ -17,7 +19,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# TODO(developer): Add a table.\n",
@@ -28,7 +32,6 @@
     "@flow.processor(input_ref=buildflow.BigQuery(table_id=_INPUT_TABLE_ID))\n",
     "def process_table(table: ray.data.Dataset):\n",
     "    return table\n",
-    "\n",
     "# NOTE: It is best to keep flow.run and your processor definition in the same\n",
     "# code block.\n",
     "output = flow.run(num_replicas=1)"
@@ -40,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(output)"
+    "print(output['process_table']['local'])"
    ]
   }
  ],
@@ -69,5 +72,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
