--- a/buildflow/samples/notebook_sample.ipynb
+++ b/buildflow/samples/notebook_sample.ipynb
@@ -39,7 +39,7 @@
         "    return table\n",
         "# NOTE: It is best to keep flow.run and your processor definition in the same\n",
         "# code block.\n",
-        "output = flow.run(num_replicas=1)"
+        "output = flow.run().results()"
       ]
     },
     {
