--- a/buildflow/samples/notebook_sample.ipynb
+++ b/buildflow/samples/notebook_sample.ipynb
@@ -11,7 +11,7 @@
         "import logging\n",
         "logging.basicConfig(level=logging.INFO)\n",
         "\n",
-        "from buildflow import Flow\n",
+        "from buildflow import Node\n",
         "import buildflow\n",
         "import ray"
       ]
@@ -28,18 +28,18 @@
         "_INPUT_TABLE_ID1 = ''\n",
         "_INPUT_TABLE_ID2 = ''\n",
         "\n",
-        "flow = Flow()\n",
+        "node = Node()\n",
         "\n",
-        "@flow.processor(source=buildflow.BigQuery(table_id=_INPUT_TABLE_ID1))\n",
+        "@node.processor(source=buildflow.BigQuery(table_id=_INPUT_TABLE_ID1))\n",
         "def process_table1(table: ray.data.Dataset):\n",
         "    return table\n",
         "\n",
-        "@flow.processor(source=buildflow.BigQuery(table_id=_INPUT_TABLE_ID2))\n",
+        "@node.processor(source=buildflow.BigQuery(table_id=_INPUT_TABLE_ID2))\n",
         "def process_table2(table: ray.data.Dataset):\n",
         "    return table\n",
         "# NOTE: It is best to keep flow.run and your processor definition in the same\n",
         "# code block.\n",
-        "output = flow.run().output()"
+        "output = node.run().output()"
       ]
     },
     {
