feat: add plan command to buildflow

--- a/buildflow/samples/notebook_sample.ipynb
+++ b/buildflow/samples/notebook_sample.ipynb
@@ -28,18 +28,18 @@
         "_INPUT_TABLE_ID1 = ''\n",
         "_INPUT_TABLE_ID2 = ''\n",
         "\n",
-        "node = Node()\n",
+        "app = Node()\n",
         "\n",
-        "@node.processor(source=buildflow.BigQuery(table_id=_INPUT_TABLE_ID1))\n",
+        "@app.processor(source=buildflow.BigQuery(table_id=_INPUT_TABLE_ID1))\n",
         "def process_table1(table: ray.data.Dataset):\n",
         "    return table\n",
         "\n",
-        "@node.processor(source=buildflow.BigQuery(table_id=_INPUT_TABLE_ID2))\n",
+        "@app.processor(source=buildflow.BigQuery(table_id=_INPUT_TABLE_ID2))\n",
         "def process_table2(table: ray.data.Dataset):\n",
         "    return table\n",
         "# NOTE: It is best to keep flow.run and your processor definition in the same\n",
         "# code block.\n",
-        "output = node.run().output()"
+        "output = app.run().output()"
       ]
     },
     {
